--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/open_file.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/open_file.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" media="all" href="../css/s.css">
-    <title>Open PRIDE XML or MzML/MzIdentML files</title>
+    <title>Open PRIDE XML or mzML/mzIdentML files</title>
 </head>
 
 <body class="template">
@@ -12,7 +12,7 @@
 
     <!-- header -->
     <div id="header">
-        <h1>Opening MzML/MzIdentML or PRIDE XML Files</h1>
+        <h1>Opening mzML/mzIdentML or PRIDE XML Files</h1>
     </div>
 
     <!-- navigation -->
@@ -29,7 +29,7 @@
 
     <!-- table of contents -->
     <div class="introduction">
-        <p>This chapter explains how to view PRIDE XML and MzML files with PRIDE Inspector.
+        <p>This chapter explains how to view PRIDE XML and mzML files with PRIDE Inspector.
             <br>
             You can open files in 3 different ways:
         </p>
