--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ui/menu_and_toolbar.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ui/menu_and_toolbar.html
@@ -125,7 +125,7 @@
                     <li>
                         <span class="keyword">Protein Details</span> - exports all the protein related information, such
                         as: protein accession, PRIDE
-                        protein score, PRIDE protein threshold, number of peptides etc., into a tab delimited text
+                        protein b1Score, PRIDE protein threshold, number of peptides etc., into a tab delimited text
                         file.
                     </li>
                     <li>
