--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/mzgraph/chromatogram.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/mzgraph/chromatogram.html
@@ -19,7 +19,7 @@
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;">
         <tr>
             <td align="left" class="topicpath">
-                <a href="spectra.html">Previous</a> | <a href="../vis_protein.html">Next</a> | <a
+                <a href="fragmentation.html">Previous</a> | <a href="../vis_protein.html">Next</a> | <a
                     href="#topicSeeAlsoTopicsList">See Also</a>
             </td>
             <td width="70%" class="topicpath"></td>
