change some of icons and component layout

--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/connect_pride_db.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/connect_pride_db.html
@@ -49,7 +49,7 @@
             <li>From the <span class="menupath">File | Connect PRIDE database</span> option in the menu bar
             </li>
             <li>From the <a href="ui/menu_and_toolbar.html">toolbar</a>, clicking on the <img
-                    src="../../../icon/16x16/open_database.gif"> button
+                    src="../../../icon/16x16/connect_database.png"> button
             </li>
         </ul>
         </p>
