--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/open_file.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/open_file.html
@@ -40,7 +40,7 @@
             <li>From the <span class="menupath">File | Open File</span> option in the menu bar
             </li>
             <li>From the <a href="ui/menu_and_toolbar.html">toolbar</a>, clicking on the <img
-                    src="../../../icon/16x16/open_file.gif"> button
+                    src="../../../icon/16x16/open_file.png"> button
             </li>
         </ul>
 
