--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ms_information.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ms_information.html
@@ -33,7 +33,8 @@
             fragments,
             identification software and other information related with the identification process. One mzIdentML can be
             related with more
-            than one Mass Spectrum files (mzXML, mzML, mzData, pkl, mgf, dta, ms2). See also <a href="">mzIdentML
+            than one Mass Spectrum files (mzXML, mzML, mzData, pkl, mgf, dta, ms2). See also <a
+                href="http://www.psidev.info/mzidentml">mzIdentML
             specifications.</a>
         </p>
 
@@ -42,16 +43,21 @@
             <li>Load spectrum files before mzIdentML loading: It associates each opened mzIdentML files with the
                 corresponding ms files.
             </li>
-            <li>Load spectrum files after mzIdentML loading: Click the <img src="../../../icon/16x16/peak.png" alt="">
-                on the<a
-                        href="ui/navigation.html.html"> Assays Panel </a></li>
+            <li>Load spectrum files after mzIdentML loading: Click the <img src="../../../icon/16x16/peak.png"
+                                                                            alt="Ms information">
+                on the<a href="ui/navigation.html"> Assays Panel </a>
+            </li>
         </ul>
 
-        Once selected, the private download window will popup. Click on the "ProteomeXchange" tab, you will see it
-        consists of two sections:
+        Once selected one of these options you can add files with the Add Multiple Files Button. This method will try to
+        find MS annotations in the mzIdentML file
+        and match selected files using the location in the SpectraData object (See also <a
+            href="http://www.psidev.info/mzidentml">mzIdentML
+        specifications.</a>).
+
         <ul>
-            <li><a href="#login">User login</a></li>
-            <li><a href="#download">Download submission</a></li>
+            <li><a href="#before">Load spectrum files before mzIdentML loading</a></li>
+            <li><a href="#after">Load spectrum files after mzIdentML loading</a></li>
         </ul>
     </div>
 
@@ -59,40 +65,25 @@
     <div id="content">
         <div class="section">
             <div class="piProcedureSteps">
-                <a name="login"></a>
+                <a name="before"></a>
 
-                <h3>User login</h3>
+                <h3>Load spectrum files before mzIdentML loading</h3>
 
                 <p>
-                    If you are a ProteomeXchange Submitter and want to download your own submission, you can use the
-                    username and
-                    password you have chosen when you register with PRIDE.
+                    If you know the folder and the MS files associated with your mzIdentML you can add them before
+                    loading the mzIdentML file.
+                    </br></br>
+                    <img src="../images/add_before_ms.png" alt="Load spectrum files before mzIdentML loading"/>
+                    </br></br>
                 </p>
 
                 <p>
-                    If you are a journal reviewer, you should be given a PRIDE reviewer account. Type in the reviewer
-                    account username and password.
+                    Click on <span class="keyword">Add Multiple Files</span> button to associate to each mzIdnetML files
+                    the spectra files.
                 </p>
 
                 <p>
-                    Click on <span class="keyword">Login</span> button once finished, PRIDE Inspector will start to
-                    retrieve
-                    all of your experiments details.
-                </p>
-
-                <a name="download"></a>
-
-                <h3>Download submission</h3>
-
-                <p>
-                    You can choose the directory where you want to save your experiments by clicking on the <span
-                        class="keyword">Browse</span> button.
-                </p>
-
-                <p>
-                    The details of the experiments you can download are shown in the experiment details.
-
-                    The table below gives a short description for every column in the experiment details table:
+                    The table below gives a short description for every column in the Spectrum File Table.
                 </p>
 
                 <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
@@ -101,46 +92,94 @@
                         <td>Description</td>
                     </tr>
                     <tr class="piRowEven">
-                        <td width="20%">Accession</td>
-                        <td>ProteomeXchange accession</td>
-                    </tr>
-                    <tr class="piRowOdd">
-                        <td width="20%">ID</td>
-                        <td>The ID of the file within the context of this submission</td>
+                        <td width="20%">File Name</td>
+                        <td>The name of the File added</td>
                     </tr>
                     <tr class="piRowEven">
                         <td width="20%">Size(M)</td>
                         <td>The size of experiment file to download in megabyte.</td>
                     </tr>
-                    <tr class="piRowOdd">
-                        <td width="20%">Name</td>
-                        <td>File name</td>
-                    </tr>
                     <tr class="piRowEven">
                         <td width="20%">Type</td>
-                        <td>ProteomeXchange submission type, such as: RESULT, RAW</td>
+                        <td>MS File Type: pkl, mgf, dta, ms2, mzML, mzData</td>
                     </tr>
                     <tr class="piRowOdd">
-                        <td width="20%">PRIDE</td>
-                        <td>PRIDE experiment accession</td>
-                    </tr>
-                    <tr class="piRowEven">
-                        <td width="20%">Relation</td>
-                        <td>Related files
-                        </td>
-                    </tr>
-                    <tr class="piRowOdd">
-                        <td width="20%">Download</td>
-                        <td>Checkbox which you can select which file to download</td>
+                        <td width="20%">Remove</td>
+                        <td>Button to remove the added file</td>
                     </tr>
                 </table>
                 <div class="note">
-                    You can choose whether to open the files after downloading by checking <span class="keyword">Open after download</span>
+                    You can choose <span class="keyword">Set</span> Button to continue with the loading process.
                 </div>
             </div>
         </div>
     </div>
 
+    <div id="content-1">
+        <div class="section">
+            <div class="piProcedureSteps">
+                <a name="after"></a>
+
+                <h3>Load spectrum files after mzIdentML loading</h3>
+
+                <p>
+                    After mzIdentML loading you can add the MS files associated with your mzIdentML. Click the <img
+                        src="../../../icon/16x16/peak.png" alt="Ms information">
+                    on the<a href="ui/navigation.html"> Assays Panel </a>
+                    </br></br>
+                    <img src="../images/add_after_ms.png" alt="Load spectrum files after mzIdentML loading"/>
+                    </br></br>
+                </p>
+
+                <p>
+                    Click on <span class="keyword">Add Multiple Files</span> button to associate to each mzIdentML files
+                    the spectra files. Also you can add manually (Click the <img src="../../../icon/16x16/open_file.gif"
+                                                                                 alt="Ms Add">) for
+                    each SpectraData object (See also <a href="http://www.psidev.info/mzidentml">mzIdentML
+                    specifications.</a>) the file associated if the annotated ms name do not match with the actual name
+                    of your file.
+                </p>
+
+                <p>
+                    The table below gives a short description for every column in the Spectrum File Table.
+                </p>
+
+                <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
+                    <tr class="piRowHead">
+                        <td width="20%">Column</td>
+                        <td>Description</td>
+                    </tr>
+                    <tr class="piRowEven">
+                        <td width="20%">File ID</td>
+                        <td>SpectraData MS File ID annotated in mzIdentML</td>
+                    </tr>
+                    <tr class="piRowEven">
+                        <td width="20%">Spectra File Source</td>
+                        <td>SpectraData MS File Name annotated in mzIdentML</td>
+                    </tr>
+                    <tr class="piRowEven">
+                        <td width="20%">No. Spectra</td>
+                        <td>Number of Spectra identified in the mzIdentML file associated with the MS File</td>
+                    </tr>
+                    <tr class="piRowEven">
+                        <td width="20%">MS File</td>
+                        <td>Location of the MS File Added</td>
+                    </tr>
+                    <tr class="piRowEven">
+                        <td width="20%">Type</td>
+                        <td>MS File Type: pkl, mgf, dta, ms2, mzML, mzData</td>
+                    </tr>
+                    <tr class="piRowOdd">
+                        <td width="20%">Add/Remove</td>
+                        <td>Button to add manually the file or remove the added file</td>
+                    </tr>
+                </table>
+                <div class="note">
+                    You can choose <span class="keyword">Set</span> Button to continue with the loading process.
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div id="seealso">
         <a name="topicSeeAlsoTopicsList"></a>
