add ms files help fixed

--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ms_information.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ms_information.html
@@ -72,9 +72,10 @@
                 <p>
                     If you know the folder and the MS files associated with your mzIdentML you can add them before
                     loading the mzIdentML file.
-                    </br></br>
+
+                <div>
                     <img src="../images/add_before_ms.png" alt="Load spectrum files before mzIdentML loading"/>
-                    </br></br>
+                </div>
                 </p>
 
                 <p>
@@ -126,9 +127,10 @@
                     After mzIdentML loading you can add the MS files associated with your mzIdentML. Click the <img
                         src="../../../icon/16x16/peak.png" alt="Ms information">
                     on the<a href="ui/navigation.html"> Assays Panel </a>
-                    </br></br>
+
+                <div>
                     <img src="../images/add_after_ms.png" alt="Load spectrum files after mzIdentML loading"/>
-                    </br></br>
+                </div>
                 </p>
 
                 <p>
