updated help documents

--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/connect_pride_db.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/connect_pride_db.html
@@ -20,7 +20,7 @@
         <tr>
             <td align="left" class="topicpath">
                 <a href="export.html">Previous</a> | <a
-                    href="download_pride_exp.html">Next</a> | <a href="#topicSeeAlsoTopicsList">See Also</a>
+                    href="review_project.html">Next</a> | <a href="#topicSeeAlsoTopicsList">See Also</a>
             </td>
             <td width="70%" class="topicpath"></td>
         </tr>
