--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ui/menu_and_toolbar.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ui/menu_and_toolbar.html
@@ -72,7 +72,7 @@
                         connects to the PRIDE public database,
                         displays a list of available public experiments
                     </li>
-                    <li><span class="keyword"><a href="../download_pride_exp.html">Private Download</a></span> -
+                    <li><span class="keyword"><a href="../review_project.html">Private Download</a></span> -
                         downloads private experiments from
                         PRIDE.
                     </li>
@@ -160,7 +160,7 @@
                         database,
                         displays a list of public available experiments
                     </li>
-                    <li><span class="keyword"><a href="../download_pride_exp.html">Private Download Toolbar</a></span> -
+                    <li><span class="keyword"><a href="../review_project.html">Private Download Toolbar</a></span> -
                         downloads private experiments
                         from
                         PRIDE.
@@ -191,7 +191,7 @@
         <ul>
             <li><a href="../open_file.html">Open File</a></li>
             <li><a href="../connect_pride_db.html">Connect PRIDE Database</a></li>
-            <li><a href="../download_pride_exp.html">Private Download</a></li>
+            <li><a href="../review_project.html">Private Download</a></li>
         </ul>
     </div>
     <div id="footer">
