--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ui/welcome.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ui/welcome.html
@@ -38,7 +38,6 @@
         <ul>
             <li><a href="#quick_start">Quick Start</a></li>
             <li><a href="#try_examples">Try Examples</a></li>
-            <li><a href="#learn_more_about">Learn More About</a></li>
             <li><a href="#feedback">Feedback</a></li>
         </ul>
     </div>
@@ -54,7 +53,7 @@
                 <p>
                     Use the buttons in this section to <a href="../open_file.html">Open mzML/PRIDE XML Files</a>,
                     <a href="../connect_pride_db.html">Connect to the PRIDE Public Database</a>,
-                    <a href="../download_pride_exp.html">download private PRIDE experiments</a> and read the help
+                    <a href="../review_project.html">download private PRIDE experiments</a> and read the help
                     documents.
                 </p>
 
@@ -66,20 +65,6 @@
                     Use the buttons in this section to open either an mzML or an PRIDE XML example file.
                     These files are included in the PRIDE Inspector installation. Alternatively, click on more to
                     download additional examples from our website.
-                </p>
-
-                <a name="learn_more_about"></a>
-
-                <h3>Learn More About</h3>
-
-                <p>
-                    This section provides quick links to some of the most important topics in the help section.
-                    <br>
-                    The topics include: <a href="../../faq/pride.html">PRIDE</a>, <a href="../../faq/pride_xml.html">PRIDE
-                    XML</a>,
-                    <a href="../../faq/pride_db.html">PRIDE Public Database</a>, <a href="../../faq/mzml.html">mzML</a>,
-                    <a href="../download_pride_exp.html">Private Download</a>, <a href="../view_chart.html">Summary
-                    Charts</a>
                 </p>
 
                 <a name="feedback"></a>
