--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/review_project.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/review_project.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" media="all" href="../css/s.css">
-    <title>Download Your Experiment from PRIDE</title>
+    <title>Review Project</title>
 </head>
 
 <body class="template">
@@ -12,14 +12,14 @@
 
     <!-- header -->
     <div id="header">
-        <h1>Download Your Experiment from PRIDE</h1>
+        <h1>Review Project</h1>
     </div>
 
     <!-- navigation -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-collapse:collapse;">
         <tr>
             <td align="left" class="topicpath">
-                <a href="connect_pride_db.html">Previous</a>| <a href="download_px_submission.html">Next</a> | <a
+                <a href="connect_pride_db.html">Previous</a>| <a href="export.html">Next</a> | <a
                     href="#topicSeeAlsoTopicsList">See Also</a>
             </td>
             <td width="70%" class="topicpath"></td>
@@ -29,23 +29,24 @@
     <!-- table of contents -->
     <div class="introduction">
         <p>
-            If you are a PRIDE submitter or journal reviewer, you can now download private PRIDE experiments using the
-            user name and password has been given to you.
+            If you are a PRIDE submitter or journal reviewer, you can now download and review private PRIDE experiments using the
+            user name and password given to you.
         </p>
 
         To start download, you can:
         <ul>
-            <li>Click on the <span class="keyword"> Private Download</span> button in the <a href="ui/welcome.html">Welcom
+            <li>Click on the <span class="keyword"> Review Project</span> button in the <a href="ui/welcome.html">Welcom
                 Screen</a></li>
-            <li>Click on <img src="../../../icon/16x16/reviewer_download.png" alt=""> on the <a
+            <li>Click on <img src="../../../icon/16x16/review_project.png" alt=""> on the <a
                     href="ui/menu_and_toolbar.html">Main Toolbar</a></li>
-            <li>Go to menu <span class="menupath">File | Private Download</span></li>
+            <li>Go to menu <span class="menupath">File | Review Project</span></li>
         </ul>
 
-        Once selected, the private download window will popup. You will see the window consists of two sections:
+        Once selected, the login window will popup. You need to follow the following steps:
         <ul>
             <li><a href="#login">User Login</a></li>
-            <li><a href="#download">Experiment Download</a></li>
+            <li><a href="#project">My Projects</a></li>
+            <li><a href="#download">Project Download</a></li>
         </ul>
     </div>
 
@@ -70,17 +71,24 @@
                 <p>
                     Click on <span class="keyword">Login</span> button once finished, PRIDE Inspector will start to
                     retrieve
-                    all of your experiments details.
+                    all of your project details.
+                </p>
+
+                <a name="project"></a>
+
+                <h3>My projects</h3>
+
+                <p>
+                    Once login, you should see all your experimental projects listed in "My projects" dialog.
+                </p>
+
+                <p>
+                    Click on <span class="keyword">View files</span> button to download project file.
                 </p>
 
                 <a name="download"></a>
 
-                <h3>Experiment Download</h3>
-
-                <p>
-                    You can choose the directory where you want to save your experiments by clicking on the <span
-                        class="keyword">Browse</span> button.
-                </p>
+                <h3>Project Download</h3>
 
                 <p>
                 The details of the experiments you can download are shown in the experiment details.
@@ -94,33 +102,16 @@
                         <td>Description</td>
                     </tr>
                     <tr class="piRowEven">
-                        <td width="20%">Accession</td>
-                        <td>PRIDE experiment accession</td>
+                        <td width="20%">File Name</td>
+                        <td>The name of the file</td>
                     </tr>
                     <tr class="piRowOdd">
                         <td width="20%">Size(M)</td>
                         <td>The size of experiment file to download in megabyte.</td>
                     </tr>
                     <tr class="piRowEven">
-                        <td width="20%">Title</td>
-                        <td>Experiment Title</td>
-                    </tr>
-                    <tr class="piRowOdd">
-                        <td width="20%">Species</td>
-                        <td>The species which the experiment is based on.</td>
-                    </tr>
-                    <tr class="piRowEven">
-                        <td width="20%">Spectra</td>
-                        <td>Number of spectra</td>
-                    </tr>
-                    <tr class="piRowOdd">
-                        <td width="20%">Protein</td>
-                        <td>Number of protein has been identified.
-                        </td>
-                    </tr>
-                    <tr class="piRowEven">
-                        <td width="20%">Peptide</td>
-                        <td>Number of peptide has been identified.</td>
+                        <td width="20%">Type</td>
+                        <td>Experimental file type</td>
                     </tr>
                     <tr class="piRowOdd">
                         <td width="20%">Download</td>
