--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/browse/quality_chart.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/browse/quality_chart.html
@@ -67,7 +67,7 @@
             <h3>Thumbnails view</h3>
 
             <p>
-                Clicking the <img src="../../../../icon/16x16/chart_info.png" alt="info icon"/> button opens the chart's
+                Clicking the <img src="../../../../icon/16x16/help.png" alt="info icon"/> button opens the chart's
                 help document.
             </p>
 
