--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ms_information.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/ms_information.html
@@ -49,7 +49,7 @@
             </li>
         </ul>
 
-        Once selected one of these options you can add files with the Add Multiple Files Button. This method will try to
+        Once selected one of these options you can add files with the Add Spectra Files Button. This method will try to
         find MS annotations in the mzIdentML file
         and match selected files using the location in the SpectraData object (See also <a
             href="http://www.psidev.info/mzidentml">mzIdentML
@@ -79,7 +79,7 @@
                 </p>
 
                 <p>
-                    Click on <span class="keyword">Add Multiple Files</span> button to associate to each mzIdnetML files
+                    Click on <span class="keyword">Add spectra files</span> button to associate to each mzIdnetML files
                     the spectra files.
                 </p>
 
@@ -134,7 +134,7 @@
                 </p>
 
                 <p>
-                    Click on <span class="keyword">Add Multiple Files</span> button to associate to each mzIdentML files
+                    Click on <span class="keyword">Add spectra files</span> button to associate to each mzIdentML files
                     the spectra files. Also you can add manually (Click the <img src="../../../icon/16x16/open_file.gif"
                                                                                  alt="Ms Add">) for
                     each SpectraData object (See also <a href="http://www.psidev.info/mzidentml">mzIdentML
